Fix bio overflowed y

--- a/src/components/bio/bio-portfolio.scss
+++ b/src/components/bio/bio-portfolio.scss
@@ -1,7 +1,7 @@
 .pf-container {
   position: relative;
   background-color: #edecec;
-  padding-top: 5%;
+  padding: 5% 0;
   text-align: center;
 
   .pf-logo {
